examples/test/testpolicy14505.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy14505
  namespace: namespace184
spec:
  podSelector:
    matchLabels:
      key21: value25
      key44: value20
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key5: value42
          key2: value46
      podSelector:
        matchLabels:
          key11: value15
          key40: value37
          key46: value23
